--- a/product-modal.html
+++ b/product-modal.html
@@ -7,17 +7,18 @@
           <i class="fas fa-times"></i>
         </button>
       </div>
-      <div class="modal-body row g-4">
+      <div class="modal-body row g-4 flex-column flex-md-row">
         <!-- Left column: Product info only -->
-        <div class="col-md-6 product-info-col">
+        <div class="col-12 col-md-6 product-info-col px-2 px-sm-3">
           <!-- Product Image -->
-          <div class="position-relative product-image-container mb-3">
-            <img id="productModalImage" src="" alt="" class="img-fluid rounded w-100" style="object-fit: contain;">
+          <div class="position-relative product-image-container mb-3 text-center">
+            <img id="productModalImage" src="" alt="" class="img-fluid rounded w-100"
+              style="object-fit: contain; max-width: 350px; max-height: 350px;">
             <div class="position-absolute top-0 start-0 m-2">
               <span class="badge bg-danger" id="productModalDiscount"></span>
             </div>
           </div>
-          <div class="d-flex align-items-center mb-2">
+          <div class="d-flex align-items-center mb-2 flex-wrap">
             <div class="text-warning me-2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -86,9 +87,9 @@
           </div>
         </div>
         <!-- Right column: Shipping, Service, Action Buttons -->
-        <div class="col-md-6 d-flex flex-column align-items-stretch justify-content-start">
+        <div class="col-12 col-md-6 d-flex flex-column align-items-stretch justify-content-start">
           <!-- Shipping Information (duplicate or summary) -->
-          <div class="card mb-3">
+          <div class="card mb-3 w-100">
             <div class="card-body p-3">
               <div class="d-flex align-items-center mb-2">
                 <i class="fas fa-shipping-fast text-primary me-2"></i>
@@ -109,7 +110,7 @@
             </div>
           </div>
           <!-- Service Information (duplicate or summary) -->
-          <div class="card mb-3">
+          <div class="card mb-3 w-100">
             <div class="card-body p-3">
               <div class="d-flex align-items-center mb-2">
                 <i class="fas fa-shield-alt text-success me-2"></i>
@@ -124,7 +125,7 @@
             </div>
           </div>
           <!-- Promotion Card -->
-          <div class="card mb-3">
+          <div class="card mb-3 w-100">
             <div class="card-body p-3">
               <div class="d-flex align-items-center mb-2">
                 <i class="fas fa-gift text-warning me-2"></i>
@@ -141,13 +142,15 @@
             </div>
           </div>
           <!-- Action Buttons -->
-          <div class="d-grid gap-2 mt-auto">
-            <button class="btn btn-danger btn-lg" id="productModalBuyNow">
-              <i class="fas fa-bolt me-2"></i>Buy Now
-            </button>
-            <button class="btn btn-primary btn-lg" id="productModalAddCart">
-              <i class="fas fa-cart-plus me-2"></i>Add to Cart
-            </button>
+          <div class="px-2 px-sm-3">
+            <div class="d-grid gap-2 mt-auto w-100">
+              <button class="btn btn-danger btn-lg w-100" id="productModalBuyNow">
+                <i class="fas fa-bolt me-2"></i>Buy Now
+              </button>
+              <button class="btn btn-primary btn-lg w-100" id="productModalAddCart">
+                <i class="fas fa-cart-plus me-2"></i>Add to Cart
+              </button>
+            </div>
           </div>
         </div>
       </div>
